--- a/yo/001/assets/css/main.css
+++ b/yo/001/assets/css/main.css
@@ -2884,6 +2884,10 @@ input, select, textarea {
 			padding: 6em 0 4em 0;
 		}
 
+		#main > section > .container2 {
+			padding: 6em 0 4em 0;
+		}
+
 		#main > section:first-child {
 			border-top: 0;
 		}
@@ -2958,7 +2962,7 @@ input, select, textarea {
 				padding: 4em 0 2em 0;
 			}
         			#main > section > .container2 {
-				padding: 0em 0 2em 0;
+				padding: 4em 0 2em 0;
 			}
 
 	}
@@ -3267,6 +3271,10 @@ input, select, textarea {
 				padding: 2em 0 0 0;
 			}
 
+			#main > section > .container2 {
+				padding: 2em 0 0 0;
+			}
+        
 		/* Footer */
 
 			#footer {
