--- a/yo/001/assets/css/main.css
+++ b/yo/001/assets/css/main.css
@@ -1754,7 +1754,7 @@ input, select, textarea {
 
 /* Container2 */
 
-.video-wrap {position:relative; padding-bottom:56.25%; padding-top:30px; height:0; overflow:hidden;}
+.video-wrap {position:relative; padding-bottom:56.25%; padding-top:30%; height:0; overflow:hidden;}
 .video-wrap iframe,
 .video-wrap object,
 .video-wrap embed {position:absolute; top:0; left:0; width:100%; height:100%;}
