--- a/members/assets/css/main.css
+++ b/members/assets/css/main.css
@@ -3150,7 +3150,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 5em 0 6em 0 ;
-		background-color: #f6f6f6;
+		background-color: #ffffff;
 	}
 
 		#footer > .inner {
